[package]
authors = ["Sarah Lim"]
categories = ["wasm"]
description = "Frame simulator for Pokemon Max Raids"
license = "Apache-2.0/MIT"
name = "raidtomi"
readme = "./README.md"
repository = "https://github.com/sliminality/raidtomi"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.29"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however. Also as of wee_alloc v0.4.2, does not yet work on stable
# (tested with rust v1.31.1).
wee_alloc = { version = "0.4.2", optional = true }

# For converting natures to and from integers.
num-traits = "0.2"
num-derive = "0.3"

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[features]
default = ["console_error_panic_hook"]
